# SouthLight

./: CMakeLists.txt  README.md  main.cpp
RessourceDirectory/: manifest.txt
RessourceDirectory/shaders/: defaultfrag.txt  defaultvert.txt  defaultvertinstancing.txt  tstfrag.txt  tstvert.txt
include/: engine.cpp  engine.h  stb_image.h
include/eventmanager/: event.h  eventmanager.cpp  eventmanager.h
include/glad/: glad.h
include/gpu/: gpu.cpp  gpu.h
include/gpu/gl/: gl_gpu.cpp  gl_gpu.h
include/maths/: vec.cpp  vec.h
include/registry/: component.cpp  registry.cpp  registry.h
include/registry/ressourceToComponentLoader/: componentloader.h  gameobjectloader.cpp  instanceloader.cpp  materialloader.cpp  meshloader.cpp  sceneloader.cpp  sceneloader.h  transformloader.cpp  visibiliteloader.cpp
include/ressources/: data.cpp  data.h  ressource.cpp  ressource.h  ressourcemanager.cpp  ressourcemanager.h
include/ressources/utility/: componentloader.cpp  gameobjectloader.cpp  materialarchetypeloader.cpp  meshloader.cpp  ressourcefactories.cpp  ressourceutility.cpp  ressourceutility.h  sceneloader.cpp  texteloader.cpp  textureloader.cpp
include/scenemanager/: scenemanager.h
include/settings/: settings.cpp
include/system/: layer.cpp  layer.h  system.h  systemfactory.cpp  systemmanager.cpp  systemmanager.h
include/system/scripts/: mvt.h
include/system/sys_impl/: renderer.cpp  transformer.cpp
include/utilite/: dataStruct.h  dataStruct.tpp  fileUtil.cpp  fileUtil.h  parser.cpp  parser.h
src/: glad.c
testing/: test_dynamicList.cpp  test_engine.cpp  test_gpu.cpp  test_parse.cpp  test_registry.cpp  test_ressources.cpp  test_sparseSet.cpp
